refactor code fix bugs

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <div id="calculator">
     <h2>Cass's calculator</h2>
-    <input ID = 'inputField' type="text" dir='rtl' disabled>
+    <input id = 'inputField' type="text" disabled>
     <div class="row">
       <button class = 'red'>AC</button>
       <button class = 'red'>CE</button>
